--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.1.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.39.0",
@@ -21,6 +22,8 @@
     "react-bootstrap": "^2.7.4",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.1"
+    "react-hook-form": "^7.43.9",
+    "sass": "^1.62.1",
+    "yup": "^1.1.1"
   }
 }
