--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,8 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-select": "^5.7.3",
+    "react-select-country-list": "^2.2.3",
     "sass": "^1.62.1",
     "yup": "^1.1.1"
   }
