--- a/app/package.json
+++ b/app/package.json
@@ -25,8 +25,10 @@
     "react-hook-form": "^7.43.9",
     "react-select": "^5.7.3",
     "react-select-country-list": "^2.2.3",
-    "sass": "^1.62.1",
     "sharp": "^0.32.1",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
